# iqraa

./: .gitmodules  CNAME  TODO.md  iqraa.html  main.js  package-lock.json  package.json  preload.js  readme.md
assets/htmlEngine/: CMakeLists.txt  htmlParser.cpp  iqraa.cpp
static/: about.html  install.html  main.html  note.html  profile.html  reader.html  settings.html
static/backend/: install.js  installData.json  mainView.js  misc.js  note.js  profile.js  reader.js
static/style/: sidebar.css  spinner.css  style.css
